<resources>
    <string name="app_name">Simple Crud</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="add_btn">Add</string>
    <string name="edit_btn">Edit</string>
    <string name="add_btn_txt">Add</string>
    <string name="series_id">Series Id</string>
    <string name="series_name">Series Name</string>
    <string name="image_url">Image Url</string>
    <string name="quote">Quote</string>
    <string name="author_name_txt">Author Name</string>
    <string name="category">Category</string>
</resources>