<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="message"
            type="com.improve10x.crud.messages.Message" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:context="com.improve10x.crud.messages.BaseAddEditMessageActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@{message.name}"
            android:textColor="@color/black"
            tools:hint="Input text" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone_number_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@{message.phoneNumber}"
            tools:hint="Input text"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/message_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@{message.messageText}"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/message_add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/add_btn"
            android:textAllCaps="false"
            android:textColor="#2D42B3"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/edit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/edit_btn"
            android:textAllCaps="false"
            android:textColor="#2D42B3"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>
</layout>